# rppico_webradio

./: .gitignore  .gitmodules  CMakeLists.txt  FreeRTOSConfig.h  cgi.h  htmldata.c  info.txt  lwipopts.h  lwipopts_examples_common.h  memmap_reserved_flash.ld  rppico_webradio.code-workspace  ssi.h  wifi_MP3_Stream.c
RTOS_tasks/: RTOS_globals.c  RTOS_globals.h  analog_input_task.c  analog_input_task.h  audio_decode_task.c  audio_decode_task.h  audio_out_task.c  audio_out_task.h  audio_process_task.c  audio_process_task.h  httpd_server_task.c  httpd_server_task.h  main_task.c  main_task.h  wifi_task.c  wifi_task.h
audioI2SAPI/: CMakeLists.txt
audioI2SAPI/src/audioI2SAPI/: audio_i2s_api.c  audio_i2s_api.h
dhcpserver/: CMakeLists.txt
dnsserver/: CMakeLists.txt
dnsserver/src/dnsserver/: dnsserver.c
docs/: faq.md  readme.md  todo.md
favicon_package_v0.16/: favicon
flash_utils/: CMakeLists.txt
flash_utils/src/flash_utils/: flash_utils.c  flash_utils.h
html_files/: index.shtml
